update npm publish script

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "kdniaosdk",
-  "version": "1.0.5",
+  "version": "1.0.7",
   "description": "",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "build_conf": "babel config -d config_lib",
-    "build": "babel src -d lib && babel config -d config_lib ",
+    "build": "babel src -d lib && babel config -d config_lib",
+    "prepublish": "npm run build",
     "test": "NODE_ENV=development mocha test/ --recursive  --compilers js:babel-register"
   },
   "author": {
