--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,14 @@
-{
+{  
+  "env": {
+    "test": {
+      "presets": [
+        "babel-preset-power-assert"
+      ],
+      "plugins": [
+        ["istanbul"]
+      ]
+    }
+  },
   "presets": ["es2015"],
   "plugins": [
     "babel-root-import"
