--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
   "scripts": {
     "compile": "babel src -d lib",
     "prepublish": "npm run compile",
-    "test": "NODE_ENV=development mocha test/ --recursive  --compilers js:babel-register"
+    "cov": "cross-env NODE_ENV=test nyc --reporter=lcovonly mocha test/*.js --timeout 15000 --recursive --compilers js:babel-register",
+    "test": "cross-env NODE_ENV=test mocha test/ --recursive  --compilers js:babel-register"
+  },
+  "nyc": {
+    "include": [
+      "src/*.js"
+    ],
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "repository": {
     "type": "git",
@@ -24,12 +35,17 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^7.2.1",
+    "babel-plugin-istanbul": "^4.1.1",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-power-assert": "^1.0.0",
     "babel-register": "^6.18.0",
     "babel-root-import": "^4.1.5",
+    "cross-env": "^4.0.0",
     "eslint": "^3.12.2",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "nyc": "^10.2.0",
+    "power-assert": "^1.4.2"
   },
   "dependencies": {
     "moment": "^2.17.1",
