--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,8 @@ cache:
     node_modules
 
 install:
-  - npm install -g cross-env
+  - npm install
   - npm install -g codecov
-  - npm install -g mocha
 
 after_script:
   - npm run cov
